--- a/index.html
+++ b/index.html
@@ -38,13 +38,16 @@
     </header>
     <main>
         <div id="tit">
-            <h1>Business Intelligence</h1>
+            <h1>Rodrigo Silva Farias</h1>
         </div>
         <div id="fundo"></div>
-        <div id="txt">
-            <h1>Rodrigo Silva Farias</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos eum excepturi maiores veritatis ex voluptate, aperiam velit, fugit nihil laudantium dolores quasi officia, libero magnam. Vero reiciendis inventore eligendi praesentium. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere cumque voluptate magnam fugit explicabo, accusantium ad similique, laborum commodi, nemo in reprehenderit itaque perspiciatis voluptatem. Quas expedita officia praesentium perspiciatis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum accusamus fugiat rerum eaque? Velit sed aspernatur expedita hic, voluptatem facere itaque ea libero cupiditate facilis quod unde! Ab, neque omnis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim molestias distinctio quam? Perferendis repellat harum fugiat consectetur error quasi ipsum, velit dolor ipsa. Laudantium corporis fugit nostrum minima quaerat excepturi? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo recusandae et optio quia assumenda earum doloribus possimus odio, dignissimos corrupti sapiente commodi vitae, magni dolorum accusamus. Optio vel blanditiis recusandae? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum quas nesciunt reiciendis itaque. Provident inventore laborum qui quibusdam maiores eaque. Nemo similique iusto quaerat repellendus libero minus maiores aliquam perferendis!</p>
+        <div class="txt">
+            <h2>Business Intelligence</h2>
+            <p>A tecnologia da informação cresce de forma significativa. Por outro lado, para as empresas, surge a necessidade de atualização constante para se manter competitiva, e também obter melhor nível de informação em menor tempo para tomada de decisão. Esses avanços tecnológicos podem ser entendidos como um conjunto de recursos utilizado para coletar e processar dados, gerando informações e conhecimentos para as empresas e usuários.</p>
+            <h2></h2>
+            <p></p>
         </div>
+        
     </main>
   </body>
 </html>
