--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="div-bar">
           <ul>
             <li>
-              <a href="#" class="item-list">Home |</a>
+              <a href="index.html" class="item-list">Home |</a>
             </li>
             <li>
               <a href="#" class="item-list">Projetos realizados |</a>
@@ -43,7 +43,7 @@
       <div class="div-bar-mobile">
         <ul>
           <li>
-            <a href="#" class="item-list">Home</a>
+            <a href="index.html" class="item-list">Home</a>
           </li>
           <li>
             <a href="#" class="item-list">Projetos realizados</a>
@@ -65,7 +65,11 @@
         <div id="fundo"></div>
         <div class="txt">
             <h2>Business Intelligence</h2>
-            <p>A tecnologia da informação cresce de forma significativa. Por outro lado, para as empresas, surge a necessidade de atualização constante para se manter competitiva, e também obter melhor nível de informação em menor tempo para tomada de decisão. Esses avanços tecnológicos podem ser entendidos como um conjunto de recursos utilizado para coletar e processar dados, gerando informações e conhecimentos para as empresas e usuários. </p>
+            <p>A tecnologia da informação cresce de forma significativa. Por outro lado, para as empresas, surge a necessidade de atualização constante para se manter competitiva, e também obter melhor nível de informação em menor tempo para tomada de decisão. Esses avanços tecnológicos podem ser entendidos como um conjunto de recursos utilizado para coletar e processar dados, gerando informações e conhecimentos para as empresas e usuários. 
+            <p>
+                Atualmente o volume de dados gerados pelo sistema operacional da empresas são elevados, e a necessidade de informações em determinados momentos se torna indispensável para o gerenciamento das atividades desenvolvidas
+            </p>
+            </p>
             <p>A base de dados da empresa é uma das melhores fontes de pesquisa que o gestor pode ter, uma vez que possui todas as informações sobre as atividades desenvolvidas. Podem ser
             identificados, por essa base, os principais clientes, os produtos mais lucrativos, traçar tendências, projetar negócios futuros e se adequar às necessidades do mercado.</p>
             <h2></h2>
