--- a/curso.html
+++ b/curso.html
@@ -1,8 +1,67 @@
-<div>
-    <nav class="aulas">
-        <div class="chield" id="cert1"></div>
-        <div class="chield" id="cert2"></div>
-    </nav>
-</div>
-<div class="txt">
-</div>
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rodrigo Farias</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile-menu.css">
+    <link rel="stylesheet" href="curso.css">
+  </head>
+  <body>
+    <header>
+      <nav id="nav-bar">
+        <div>
+            <abbr title="Rodrigo S. Farias"><img src="imagens/Rodrigo-jpeg.jfif" alt="Rodrigo Farias" id="image"></abbr>
+        </div>
+        <div id="div-bar">
+          <ul>
+            <li>
+              <a href="index.html" class="item-list">Home |</a>
+            </li>
+            <li>
+              <a href="#" class="item-list">Projetos realizados |</a>
+            </li>
+            <li>
+              <a href="#" class="item-list">Certificados |</a>
+            </li>
+            <li>
+                <a href="curso.html" class="item-list">Curso</a>
+            </li>
+          </ul>
+        </div>
+        
+        
+        <div class="botao">
+          <button onclick="menuShow()">
+            <img class="icon" src="menu_white_36dp.svg" alt="" />
+          </button>
+        </div>
+      </nav>
+
+      <!--mobile menu-->
+      <div class="div-bar-mobile">
+        <ul>
+          <li>
+            <a href="index.html" class="item-list">Home</a>
+          </li>
+          <li>
+            <a href="#" class="item-list">Projetos realizados</a>
+          </li>
+          <li>
+            <a href="#" class="item-list">Certificados</a>
+          </li>
+          <li>
+              <a href="curso.html" class="item-list">Curso</a>
+          </li>
+        </ul>
+      </div>
+
+    </header>
+    <main>
+         <div class="foto-aula"></div>
+    </main>
+    <script src="script.js"></script>
+  </body>
+</html>
