--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a href="#" class="item-list">Certificados |</a>
             </li>
             <li>
-                <a href="#" class="item-list">Curso</a>
+                <a href="curso.html" class="item-list">Curso</a>
             </li>
           </ul>
         </div>
@@ -52,7 +52,7 @@
             <a href="#" class="item-list">Certificados</a>
           </li>
           <li>
-              <a href="#" class="item-list">Curso</a>
+              <a href="curso.html" class="item-list">Curso</a>
           </li>
         </ul>
       </div>
