--- a/curso.html
+++ b/curso.html
@@ -5,15 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rodrigo Farias</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mobile-menu.css">
-    <link rel="stylesheet" href="curso.css">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mobile-menu.css" />
+    <link rel="stylesheet" href="curso.css" />
   </head>
   <body>
     <header>
       <nav id="nav-bar">
         <div>
-            <abbr title="Rodrigo S. Farias"><img src="imagens/Rodrigo-jpeg.jfif" alt="Rodrigo Farias" id="image"></abbr>
+          <abbr title="Rodrigo S. Farias"
+            ><img
+              src="imagens/Rodrigo-jpeg.jfif"
+              alt="Rodrigo Farias"
+              id="image"
+          /></abbr>
         </div>
         <div id="div-bar">
           <ul>
@@ -27,12 +32,11 @@
               <a href="#" class="item-list">Certificados |</a>
             </li>
             <li>
-                <a href="curso.html" class="item-list">Curso</a>
+              <a href="curso.html" class="item-list">Curso</a>
             </li>
           </ul>
         </div>
-        
-        
+
         <div class="botao">
           <button onclick="menuShow()">
             <img class="icon" src="menu_white_36dp.svg" alt="" />
@@ -53,15 +57,55 @@
             <a href="#" class="item-list">Certificados</a>
           </li>
           <li>
-              <a href="curso.html" class="item-list">Curso</a>
+            <a href="curso.html" class="item-list">Curso</a>
           </li>
         </ul>
       </div>
-
     </header>
     <main>
-         <div class="foto-aula"></div>
+      <div id="tit">
+        <h1>Rodrigo Silva Farias</h1>
+      </div>
     </main>
+    <div class="aaa">
+        <div class="container">
+          <div class="foto-aula">
+            <div class="txt-ft">Aula presencial, Power BI</div>
+          </div>
+        </div>
+        <div class="texto">
+          <h2>Curso de Power BI</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quas
+            deleniti ipsam veniam officiis eum odit quod neque voluptatem doloribus
+            architecto blanditiis porro aperiam odio, vel ea quaerat earum
+            perspiciatis! Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Quibusdam eum sed optio esse a cum quasi beatae itaque, perferendis
+            necessitatibus maiores quia temporibus neque fugit vitae illo repellat
+            consectetur deserunt!
+          </p>
+          <div class="certificado"></div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quos
+            porro libero odit odio maiores laudantium quia nihil laborum natus
+            obcaecati error aliquid iure, dignissimos non amet at cumque
+            voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Placeat ipsum nam accusantium nobis, cumque error magnam, molestiae odit
+            corporis, ut illum eaque architecto. Odio sint ipsa alias corrupti,
+            adipisci exercitationem! Lorem ipsum dolor sit amet consectetur,
+            adipisicing elit. Similique pariatur, explicabo quae rem velit ullam
+            ipsa facere totam voluptatibus voluptate voluptas nemo quisquam vero
+            modi vel, reprehenderit recusandae provident itaque. Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Ducimus culpa ea consequuntur
+            quidem deserunt ipsa corrupti porro temporibus dolor at! Est saepe
+            nostrum obcaecati sit tempora repudiandae in accusantium impedit. Lorem
+            ipsum, dolor sit amet consectetur adipisicing elit. Iste facilis sed
+            voluptates facere nihil autem vitae tenetur quasi reprehenderit
+            consectetur, dignissimos possimus ut doloremque est voluptatibus
+            dolorem? Voluptate, reiciendis animi. lorem
+          </p>
+        </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
