--- a/certificados.html
+++ b/certificados.html
@@ -7,6 +7,7 @@
     <title>Rodrigo Farias</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mobile-menu.css">
+    <link rel="stylesheet" href="certificados.css">
   </head>
   <body>
     <header>
@@ -62,23 +63,51 @@
         <div id="tit">
             <h1>Rodrigo Silva Farias</h1>
         </div>
-        <div id="fundo"></div>
-        <div class="txt">
-            <h2>Business Intelligence</h2>
-            <p>A tecnologia da informação cresce de forma significativa. Por outro lado, para as empresas, surge a necessidade de atualização constante para se manter competitiva, e também obter melhor nível de informação em menor tempo para tomada de decisão. Esses avanços tecnológicos podem ser entendidos como um conjunto de recursos utilizado para coletar e processar dados, gerando informações e conhecimentos para as empresas e usuários. 
-            <p>
-            Atualmente o volume de dados gerados pelo sistema operacional da empresas são elevados, e a necessidade de informações em determinados momentos se torna indispensável para o gerenciamento das atividades desenvolvidas
-            </p>
-            </p>
-            <p>A base de dados da empresa é uma das melhores fontes de pesquisa que o gestor pode ter, uma vez que possui todas as informações sobre as atividades desenvolvidas. Podem ser
-            identificados, por essa base, os principais clientes, os produtos mais lucrativos, traçar tendências, projetar negócios futuros e se adequar às necessidades do mercado.</p>
-            <h2></h2>
-            <p></p>
-        </div>
-
-
-        
     </main>
+    <div class="fundo-certificado">
+        <div class="certificado-container">
+            <nav class="certificados" id="cert01">
+                <a href="#imagem"></a>
+            </nav>
+            <p id="txt"></p>
+            <nav class="certificados" id="cert02">
+                <a href="#imagem"></a>
+            </nav>
+            <p id="txt"></p>
+            <nav class="certificados" id="cert03">
+                <a href="#imagem"></a>
+            </nav>
+            <p id="txt"></p>
+            <nav class="certificados" id="cert04">
+                <a href="#imagem"></a>
+            </nav>
+            <p id="txt"></p>
+            <nav class="certificados" id="cert05">
+                <a href="#imagem"></a>
+            </nav>
+            <p id="txt"></p>
+            <nav class="certificados" id="cert06">
+                <a href="#imagem"></a>
+            </nav>
+            <p id="txt"></p>
+            <nav class="certificados" id="cert07">
+                <a href="#imagem"></a>
+            </nav>
+            <p id="txt"></p>
+            <nav class="certificados" id="cert08">
+                <a href="#imagem"></a>
+            </nav>
+            <p id="txt"></p>
+            <nav class="certificados" id="cert09">
+                <a href="#imagem"></a>
+            </nav>
+            <p id="txt"></p>
+            <nav class="certificados" id="cert10">
+                <a href="#imagem"></a>
+            </nav>
+            <p id="txt"></p>
+        </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
