--- a/curso.html
+++ b/curso.html
@@ -29,7 +29,7 @@
               <a href="#" class="item-list">Projetos realizados |</a>
             </li>
             <li>
-              <a href="#" class="item-list">Certificados |</a>
+              <a href="certificados.html" class="item-list">Certificados |</a>
             </li>
             <li>
               <a href="curso.html" class="item-list">Curso</a>
@@ -54,7 +54,7 @@
             <a href="#" class="item-list">Projetos realizados</a>
           </li>
           <li>
-            <a href="#" class="item-list">Certificados</a>
+            <a href="certificados.html" class="item-list">Certificados</a>
           </li>
           <li>
             <a href="curso.html" class="item-list">Curso</a>
