--- a/certificados.html
+++ b/certificados.html
@@ -5,15 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rodrigo Farias</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mobile-menu.css">
-    <link rel="stylesheet" href="certificados.css">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mobile-menu.css" />
+    <link rel="stylesheet" href="certificados.css" />
   </head>
   <body>
     <header>
       <nav id="nav-bar">
         <div>
-            <abbr title="Rodrigo S. Farias"><img src="imagens/Rodrigo-jpeg.jfif" alt="Rodrigo Farias" id="image"></abbr>
+          <abbr title="Rodrigo S. Farias"
+            ><img
+              src="imagens/Rodrigo-jpeg.jfif"
+              alt="Rodrigo Farias"
+              id="image"
+          /></abbr>
         </div>
         <div id="div-bar">
           <ul>
@@ -27,12 +32,11 @@
               <a href="certificados.html" class="item-list">Certificados |</a>
             </li>
             <li>
-                <a href="curso.html" class="item-list">Curso</a>
+              <a href="curso.html" class="item-list">Curso</a>
             </li>
           </ul>
         </div>
-        
-        
+
         <div class="botao">
           <button onclick="menuShow()">
             <img class="icon" src="menu_white_36dp.svg" alt="" />
@@ -53,61 +57,161 @@
             <a href="certificados.html" class="item-list">Certificados</a>
           </li>
           <li>
-              <a href="curso.html" class="item-list">Curso</a>
+            <a href="curso.html" class="item-list">Curso</a>
           </li>
         </ul>
       </div>
-
     </header>
     <main>
-        <div id="tit">
-            <h1>Rodrigo Silva Farias</h1>
-        </div>
+      <div id="tit">
+        <h1>Rodrigo Silva Farias</h1>
+      </div>
     </main>
+
     <div class="fundo-certificado">
-        <div class="certificado-container">
-            <nav class="certificados" id="cert01">
-                <a href="#imagem"></a>
-            </nav>
-            <p id="txt"></p>
-            <nav class="certificados" id="cert02">
-                <a href="#imagem"></a>
-            </nav>
-            <p id="txt"></p>
-            <nav class="certificados" id="cert03">
-                <a href="#imagem"></a>
-            </nav>
-            <p id="txt"></p>
-            <nav class="certificados" id="cert04">
-                <a href="#imagem"></a>
-            </nav>
-            <p id="txt"></p>
-            <nav class="certificados" id="cert05">
-                <a href="#imagem"></a>
-            </nav>
-            <p id="txt"></p>
-            <nav class="certificados" id="cert06">
-                <a href="#imagem"></a>
-            </nav>
-            <p id="txt"></p>
-            <nav class="certificados" id="cert07">
-                <a href="#imagem"></a>
-            </nav>
-            <p id="txt"></p>
-            <nav class="certificados" id="cert08">
-                <a href="#imagem"></a>
-            </nav>
-            <p id="txt"></p>
-            <nav class="certificados" id="cert09">
-                <a href="#imagem"></a>
-            </nav>
-            <p id="txt"></p>
-            <nav class="certificados" id="cert10">
-                <a href="#imagem"></a>
-            </nav>
-            <p id="txt"></p>
-        </div>
+      <div class="maior">
+        <nav class="menor" id="cert001">
+          <a href="#imagem" >
+            <img
+              src="certificados/certificado01.png"
+              alt="certificado01"
+              id="cert01"
+              class="certificados"
+            />
+          </a>
+        </nav>
+
+        <nav class="menor" id="cert002">
+          <a href="#imagem2">
+            <img
+              src="certificados/cert2.png"
+              id="cert02"
+              class="certificados"
+            />
+          </a>
+        </nav>
+
+        <nav class="menor" id="cert003">
+          <a href="#imagem">
+            <img
+              src="certificados/cert3.png"
+              alt="certificado02"
+              id="cert03"
+              class="certificados"
+            />
+          </a>
+        </nav>
+
+        <nav class="menor" id="cert004">
+          <a href="#imagem">
+            <img
+              src="certificados/cert4.png"
+              alt="certificado02"
+              id="cert04"
+              class="certificados"
+            />
+          </a>
+        </nav>
+
+        <nav class="menor" id="cert005">
+          <a href="#imagem">
+            <img
+              src="certificados/cert5.png"
+              alt="certificado02"
+              id="cert05"
+              class="certificados"
+            />
+          </a>
+        </nav>
+
+        <nav class="menor" id="cert006">
+          <a href="#imagem">
+            <img
+              src="certificados/cert6.png"
+              alt="certificado02"
+              id="cert06"
+              class="certificados"
+            />
+          </a>
+        </nav>
+
+        <nav class="menor" id="cert007">
+          <a href="#imagem">
+            <img
+              src="certificados/cert7.png"
+              alt="certificado02"
+              id="cert07"
+              class="certificados"
+            />
+          </a>
+        </nav>
+
+        <nav class="menor" id="cert008">
+          <a href="#imagem">
+            <img
+              src="certificados/cert8.png"
+              alt="certificado02"
+              id="cert08"
+              class="certificados"
+            />
+          </a>
+        </nav>
+
+        <nav class="menor" id="cert009">
+          <a href="#imagem">
+            <img
+              src="certificados/cert9.png"
+              alt="certificado02"
+              id="cert09"
+              class="certificados"
+            />
+          </a>
+        </nav>
+
+        <nav class="menor" id="cert0010">
+          <a href="#imagem">
+            <img
+              src="certificados/cert10.png"
+              alt="certificado02"
+              id="cert10"
+              class="certificados"
+            />
+          </a>
+        </nav>
+      </div>
     </div>
+
+    <!--lightbox-->
+    <a href="certificados.html" class="lightbox" id="imagem">
+      <span id="img01"></span>
+    </a>
+    <a href="certificados.html" class="lightbox" id="imagem2">
+      <span id="img02"></span>
+    </a>
+    <a href="certificados.html" class="lightbox" id="imagem2">
+      <span id="img02"></span>
+    </a>
+    <a href="certificados.html" class="lightbox" id="imagem">
+      <span id="img04"></span>
+    </a>
+    <a href="certificados.html" class="lightbox" id="imagem">
+      <span id="img05"></span>
+    </a>
+    <a href="certificados.html" class="lightbox" id="imagem">
+      <span id="img06"></span>
+    </a>
+    <a href="certificados.html" class="lightbox" id="imagem">
+      <span id="img07"></span>
+    </a>
+    <a href="certificados.html" class="lightbox" id="imagem">
+      <span id="img08"></span>
+    </a>
+    <a href="certificados.html" class="lightbox" id="imagem">
+      <span id="img09"></span>
+    </a>
+    <a href="certificados.html" class="lightbox" id="imagem">
+      <span id="img10"></span>
+    </a>
     <script src="script.js"></script>
   </body>
 </html>
