--- a/certificados.html
+++ b/certificados.html
@@ -67,151 +67,77 @@
         <h1>Rodrigo Silva Farias</h1>
       </div>
     </main>
-
-    <div class="fundo-certificado">
-      <div class="maior">
-        <nav class="menor" id="cert001">
-          <a href="#imagem" >
+    <div class="fundo-slider">
+      <div class="container">
+        <button class="arrow-left control" aria-label="Previous image">◀</button>
+        <button class="arrow-right control" aria-label="Next Image">▶</button>
+        <div class="gallery-wrapper">
+          <div class="gallery">
+            <!--       <div class="item current-item cyan"></div>
+            <div class="item deeppink"></div>
+            <div class="item turquoise"></div>
+            <div class="item darkblue"></div>
+            <div class="item purple"></div> -->
             <img
               src="certificados/certificado01.png"
-              alt="certificado01"
-              id="cert01"
-              class="certificados"
+              alt="Beach Image"
+              class="item current-item"
             />
-          </a>
-        </nav>
-
-        <nav class="menor" id="cert002">
-          <a href="#imagem2">
             <img
               src="certificados/cert2.png"
-              id="cert02"
-              class="certificados"
+              alt="Animal Image"
+              class="item current-item"
             />
-          </a>
-        </nav>
-
-        <nav class="menor" id="cert003">
-          <a href="#imagem">
             <img
               src="certificados/cert3.png"
-              alt="certificado02"
-              id="cert03"
-              class="certificados"
+              alt="Street Image"
+              class="item current-item"
             />
-          </a>
-        </nav>
-
-        <nav class="menor" id="cert004">
-          <a href="#imagem">
             <img
               src="certificados/cert4.png"
-              alt="certificado02"
-              id="cert04"
-              class="certificados"
+              alt="Zoo Image"
+              class="item current-item"
             />
-          </a>
-        </nav>
-
-        <nav class="menor" id="cert005">
-          <a href="#imagem">
             <img
               src="certificados/cert5.png"
-              alt="certificado02"
-              id="cert05"
-              class="certificados"
+              alt="Model Image"
+              class="item current-item"
             />
-          </a>
-        </nav>
-
-        <nav class="menor" id="cert006">
-          <a href="#imagem">
             <img
               src="certificados/cert6.png"
-              alt="certificado02"
-              id="cert06"
-              class="certificados"
+              alt="Model Image"
+              class="item current-item"
             />
-          </a>
-        </nav>
-
-        <nav class="menor" id="cert007">
-          <a href="#imagem">
             <img
               src="certificados/cert7.png"
-              alt="certificado02"
-              id="cert07"
-              class="certificados"
+              alt="Model Image"
+              class="item current-item"
             />
-          </a>
-        </nav>
-
-        <nav class="menor" id="cert008">
-          <a href="#imagem">
             <img
               src="certificados/cert8.png"
-              alt="certificado02"
-              id="cert08"
-              class="certificados"
+              alt="Model Image"
+              class="item current-item"
             />
-          </a>
-        </nav>
-
-        <nav class="menor" id="cert009">
-          <a href="#imagem">
             <img
               src="certificados/cert9.png"
-              alt="certificado02"
-              id="cert09"
-              class="certificados"
+              alt="Model Image"
+              class="item current-item"
             />
-          </a>
-        </nav>
-
-        <nav class="menor" id="cert0010">
-          <a href="#imagem">
             <img
               src="certificados/cert10.png"
-              alt="certificado02"
-              id="cert10"
-              class="certificados"
+              alt="Model Image"
+              class="item current-item"
             />
-          </a>
-        </nav>
+          </div>
+        </div>
+      </div>
+      <div class="txt-certificado">
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo vel reprehenderit exercitationem voluptatem consectetur voluptate maiores ut reiciendis odit saepe perspiciatis quod expedita dolor iusto, pariatur rem assumenda quas quam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit vitae nemo optio magni. Asperiores dignissimos fuga rerum, suscipit, voluptatibus culpa quam amet consectetur natus pariatur voluptate vitae, atque voluptatem porro. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus maiores corporis, ducimus explicabo sit distinctio illo incidunt at quo repudiandae consequatur corrupti dolorum quasi, cum doloremque ullam. Cumque, consequuntur numquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente vero iste, ad consequuntur tempora aperiam eligendi illum necessitatibus nam, voluptas, deserunt commodi? Unde obcaecati quaerat maiores quis magni. Ullam, soluta! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod voluptate quia quos unde assumenda molestias nulla, eum iure dolores non, error, omnis similique eveniet quibusdam officiis exercitationem nostrum id fugit.
+        </p>
       </div>
     </div>
 
-    <!--lightbox-->
-    <a href="certificados.html" class="lightbox" id="imagem">
-      <span id="img01"></span>
-    </a>
-    <a href="certificados.html" class="lightbox" id="imagem2">
-      <span id="img02"></span>
-    </a>
-    <a href="certificados.html" class="lightbox" id="imagem2">
-      <span id="img02"></span>
-    </a>
-    <a href="certificados.html" class="lightbox" id="imagem">
-      <span id="img04"></span>
-    </a>
-    <a href="certificados.html" class="lightbox" id="imagem">
-      <span id="img05"></span>
-    </a>
-    <a href="certificados.html" class="lightbox" id="imagem">
-      <span id="img06"></span>
-    </a>
-    <a href="certificados.html" class="lightbox" id="imagem">
-      <span id="img07"></span>
-    </a>
-    <a href="certificados.html" class="lightbox" id="imagem">
-      <span id="img08"></span>
-    </a>
-    <a href="certificados.html" class="lightbox" id="imagem">
-      <span id="img09"></span>
-    </a>
-    <a href="certificados.html" class="lightbox" id="imagem">
-      <span id="img10"></span>
-    </a>
     <script src="script.js"></script>
   </body>
 </html>
