--- a/projetos.html
+++ b/projetos.html
@@ -7,7 +7,7 @@
     <title>Rodrigo Farias</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mobile-menu.css">
-    <link rel="stylesheet" href="projetos.css">nk
+    <link rel="stylesheet" href="projetos.css">
   </head>
   <body>
     <header>
@@ -62,6 +62,13 @@
     <main>
         <div id="tit">
             <h1>Rodrigo Silva Farias</h1>
+        </div>
+        <div class="dash-container">
+            <div class="hotel">
+                <iframe title="Dash - Rede de Hotéis - Visão Geral" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiYzIzMmE4MDAtMWExNi00ZWNkLWJjOTctMGFkODcyNTcwYmU2IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9" frameborder="0" allowFullScreen="true"></iframe>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore rerum omnis a voluptates modi incidunt exercitationem, similique id, quasi fugit repellat tenetur porro, officiis sequi? Minus voluptas assumenda cum minima! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod provident laudantium vero optio possimus ipsam officia, quasi hic architecto, rerum adipisci molestiae non quam velit impedit fugiat? Aut, non nesciunt?  </p>
+            </div>
+        </div>
     </main>
     <script src="script.js"></script>
   </body>
