--- a/certificados.html
+++ b/certificados.html
@@ -26,7 +26,7 @@
               <a href="index.html" class="item-list">Home |</a>
             </li>
             <li>
-              <a href="#" class="item-list">Projetos realizados |</a>
+              <a href="projetos.html" class="item-list">Projetos realizados |</a>
             </li>
             <li>
               <a href="certificados.html" class="item-list">Certificados |</a>
@@ -51,7 +51,7 @@
             <a href="index.html" class="item-list">Home</a>
           </li>
           <li>
-            <a href="#" class="item-list">Projetos realizados</a>
+            <a href="projetos.html" class="item-list">Projetos realizados</a>
           </li>
           <li>
             <a href="certificados.html" class="item-list">Certificados</a>
