--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <a href="index.html" class="item-list">Home |</a>
             </li>
             <li>
-              <a href="#" class="item-list">Projetos realizados |</a>
+              <a href="projetos.html" class="item-list">Projetos realizados |</a>
             </li>
             <li>
               <a href="certificados.html" class="item-list">Certificados |</a>
@@ -46,7 +46,7 @@
             <a href="index.html" class="item-list">Home</a>
           </li>
           <li>
-            <a href="#" class="item-list">Projetos realizados</a>
+            <a href="projetos.html" class="item-list">Projetos realizados</a>
           </li>
           <li>
             <a href="certificados.html" class="item-list">Certificados</a>
