--- a/certificados.html
+++ b/certificados.html
@@ -26,7 +26,9 @@
               <a href="index.html" class="item-list">Home |</a>
             </li>
             <li>
-              <a href="projetos.html" class="item-list">Projetos realizados |</a>
+              <a href="projetos.html" class="item-list"
+                >Projetos realizados |</a
+              >
             </li>
             <li>
               <a href="certificados.html" class="item-list">Certificados |</a>
@@ -67,77 +69,88 @@
         <h1>Rodrigo Silva Farias</h1>
       </div>
     </main>
-    <div class="fundo-slider">
-      <div class="container">
-        <button class="arrow-left control" aria-label="Previous image">◀</button>
-        <button class="arrow-right control" aria-label="Next Image">▶</button>
-        <div class="gallery-wrapper">
-          <div class="gallery">
-            <!--       <div class="item current-item cyan"></div>
-            <div class="item deeppink"></div>
-            <div class="item turquoise"></div>
-            <div class="item darkblue"></div>
-            <div class="item purple"></div> -->
-            <img
-              src="certificados/certificado01.png"
-              alt="Beach Image"
-              class="item current-item"
-            />
-            <img
-              src="certificados/cert2.png"
-              alt="Animal Image"
-              class="item current-item"
-            />
-            <img
-              src="certificados/cert3.png"
-              alt="Street Image"
-              class="item current-item"
-            />
-            <img
-              src="certificados/cert4.png"
-              alt="Zoo Image"
-              class="item current-item"
-            />
-            <img
-              src="certificados/cert5.png"
-              alt="Model Image"
-              class="item current-item"
-            />
-            <img
-              src="certificados/cert6.png"
-              alt="Model Image"
-              class="item current-item"
-            />
-            <img
-              src="certificados/cert7.png"
-              alt="Model Image"
-              class="item current-item"
-            />
-            <img
-              src="certificados/cert8.png"
-              alt="Model Image"
-              class="item current-item"
-            />
-            <img
-              src="certificados/cert9.png"
-              alt="Model Image"
-              class="item current-item"
-            />
-            <img
-              src="certificados/cert10.png"
-              alt="Model Image"
-              class="item current-item"
-            />
+    <div class="engloba">
+      <div class="content">
+        <div class="slides">
+          <input type="radio" name="slide" id="slide1" checked />
+          <input type="radio" name="slide" id="slide2" />
+          <input type="radio" name="slide" id="slide3" />
+          <input type="radio" name="slide" id="slide4" />
+          <input type="radio" name="slide" id="slide5" />
+          <input type="radio" name="slide" id="slide6" />
+          <input type="radio" name="slide" id="slide7" />
+          <input type="radio" name="slide" id="slide8" />
+          <input type="radio" name="slide" id="slide9" />
+          <input type="radio" name="slide" id="slide10" />
+
+          <div class="slide s1">
+            <img src="certificados/cert01.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="certificados/cert02.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="certificados/cert03.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="certificados/cert04.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="certificados/cert05.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="certificados/cert06.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="certificados/cert07.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="certificados/cert08.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="certificados/cert09.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="certificados/cert10.png" alt="" />
           </div>
         </div>
       </div>
-      <div class="txt-certificado">
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo vel reprehenderit exercitationem voluptatem consectetur voluptate maiores ut reiciendis odit saepe perspiciatis quod expedita dolor iusto, pariatur rem assumenda quas quam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit vitae nemo optio magni. Asperiores dignissimos fuga rerum, suscipit, voluptatibus culpa quam amet consectetur natus pariatur voluptate vitae, atque voluptatem porro. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus maiores corporis, ducimus explicabo sit distinctio illo incidunt at quo repudiandae consequatur corrupti dolorum quasi, cum doloremque ullam. Cumque, consequuntur numquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente vero iste, ad consequuntur tempora aperiam eligendi illum necessitatibus nam, voluptas, deserunt commodi? Unde obcaecati quaerat maiores quis magni. Ullam, soluta! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod voluptate quia quos unde assumenda molestias nulla, eum iure dolores non, error, omnis similique eveniet quibusdam officiis exercitationem nostrum id fugit.
-        </p>
-      </div>
     </div>
-
+    <div class="navigation">
+      <label class="bar" for="slide1"></label>
+      <label class="bar" for="slide2"></label>
+      <label class="bar" for="slide3"></label>
+      <label class="bar" for="slide4"></label>
+      <label class="bar" for="slide5"></label>
+      <label class="bar" for="slide6"></label>
+      <label class="bar" for="slide7"></label>
+      <label class="bar" for="slide8"></label>
+      <label class="bar" for="slide9"></label>
+      <label class="bar" for="slide10"></label>
+    </div>
+    <div class="txt-certificado">
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi consequatur
+        beatae quas tenetur quam autem iure corporis assumenda enim debitis earum
+        illum, exercitationem nihil ad, repellendus aspernatur quasi, delectus
+        illo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita
+        beatae eligendi omnis nesciunt qui. Expedita et tempore quos maiores
+        laborum eum distinctio voluptates? Obcaecati doloremque explicabo beatae
+        atque. Voluptatem, laborum? Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Dignissimos ullam dolorem ab commodi veritatis voluptas
+        ipsum rem cum voluptatem voluptate corrupti libero, vel accusantium
+        excepturi quo est velit aut amet! Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Optio omnis veritatis inventore debitis quidem nam,
+        praesentium ex laborum suscipit animi soluta quasi aut nostrum cupiditate,
+        modi corrupti qui, vel sit? Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Laboriosam libero, doloribus, excepturi amet enim
+        deleniti ad odit deserunt sed consectetur blanditiis. Ipsum nemo omnis
+        nulla porro voluptas nam ipsam assumenda.
+      </p>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis distinctio, exercitationem cum natus nisi vitae repudiandae minus mollitia earum eligendi neque suscipit odio adipisci vel tenetur accusamus! Culpa, autem possimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui error tempore quaerat placeat ex aliquid quibusdam esse rem ipsam dolor itaque provident recusandae, quasi illo impedit ipsa numquam quam corrupti.
+      </p>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
