--- a/curso.html
+++ b/curso.html
@@ -26,7 +26,9 @@
               <a href="index.html" class="item-list">Home |</a>
             </li>
             <li>
-              <a href="projetos.html" class="item-list">Projetos realizados |</a>
+              <a href="projetos.html" class="item-list"
+                >Projetos realizados |</a
+              >
             </li>
             <li>
               <a href="certificados.html" class="item-list">Certificados |</a>
@@ -68,44 +70,17 @@
       </div>
     </main>
     <div class="aaa">
-        <div class="container">
-          <div class="foto-aula">
-            <div class="txt-ft">Aula presencial, Power BI</div>
-          </div>
+      <div class="container-frs">
+        <div class="foto-frs">
         </div>
-        <div class="texto">
-          <h2>Curso de Power BI</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quas
-            deleniti ipsam veniam officiis eum odit quod neque voluptatem doloribus
-            architecto blanditiis porro aperiam odio, vel ea quaerat earum
-            perspiciatis! Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Quibusdam eum sed optio esse a cum quasi beatae itaque, perferendis
-            necessitatibus maiores quia temporibus neque fugit vitae illo repellat
-            consectetur deserunt!
-          </p>
-          <div class="certificado"></div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quos
-            porro libero odit odio maiores laudantium quia nihil laborum natus
-            obcaecati error aliquid iure, dignissimos non amet at cumque
-            voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Placeat ipsum nam accusantium nobis, cumque error magnam, molestiae odit
-            corporis, ut illum eaque architecto. Odio sint ipsa alias corrupti,
-            adipisci exercitationem! Lorem ipsum dolor sit amet consectetur,
-            adipisicing elit. Similique pariatur, explicabo quae rem velit ullam
-            ipsa facere totam voluptatibus voluptate voluptas nemo quisquam vero
-            modi vel, reprehenderit recusandae provident itaque. Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Ducimus culpa ea consequuntur
-            quidem deserunt ipsa corrupti porro temporibus dolor at! Est saepe
-            nostrum obcaecati sit tempora repudiandae in accusantium impedit. Lorem
-            ipsum, dolor sit amet consectetur adipisicing elit. Iste facilis sed
-            voluptates facere nihil autem vitae tenetur quasi reprehenderit
-            consectetur, dignissimos possimus ut doloremque est voluptatibus
-            dolorem? Voluptate, reiciendis animi. lorem
-          </p>
+      </div>
+      <div class="container">
+        <div class="foto-aula">
+          <div class="txt-ft">Aula presencial, Power BI</div>
         </div>
+      </div>
     </div>
+   
     <script src="script.js"></script>
   </body>
 </html>
