--- a/curso.html
+++ b/curso.html
@@ -70,17 +70,41 @@
       </div>
     </main>
     <div class="aaa">
-      <div class="container-frs">
-        <div class="foto-frs">
+      <div class="txt-curso">
+        <div class="container">
+          <a
+            href="Curso Business Intelligence + Power BI Básico.pdf"
+            target="_blank"
+            >Clique aqui para ver o Curso Business Intelligence</a
+          >
         </div>
-      </div>
-      <div class="container">
-        <div class="foto-aula">
-          <div class="txt-ft">Aula presencial, Power BI</div>
-        </div>
+        <p>
+          O instrutor Rodrigo Farias, é um profissional
+          <strong>
+            graduado em Processos Gerenciais, possui MBA em Business
+            Intelligence, especialista na área de Análise de Dados </strong
+          >, Planejamento e Administração de Contratos, construiu sua carreira
+          de mais de<strong>
+            20 anos de experiência nas áreas de Petróleo, Mineração, Engenharia
+            e Industrias de Bens de Capital.
+          </strong>
+        </p>
+        <p>
+          O Power BI é uma ferramenta sensacional na visualização de dados em
+          grandes e médias empresas dos mais variados nichos, facilitando o
+          entendimento da área de negócios e tornando a
+          <strong>tomada de decisões</strong> muita mais assertiva através de
+          insights precisos e corretos.
+        </p>
+        <h3>Experiência com a Ferramenta:</h3>
+        <p>
+          O software de visualização de dados <strong>POWER BI</strong> é uma
+          ferramenta bem fãcil de aprender e bastante intuitiva, tornando o dia
+          a dia dos analistas de dados/negócios bem prático e muito prazeroso.
+        </p>
+        <div class="foto-aula"></div>
       </div>
     </div>
-   
     <script src="script.js"></script>
   </body>
 </html>
