--- a/projetos.html
+++ b/projetos.html
@@ -5,15 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rodrigo Farias</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mobile-menu.css">
-    <link rel="stylesheet" href="projetos.css">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mobile-menu.css" />
+    <link rel="stylesheet" href="projetos.css" />
   </head>
   <body>
     <header>
       <nav id="nav-bar">
         <div>
-            <abbr title="Rodrigo S. Farias"><img src="imagens/Rodrigo-jpeg.jfif" alt="Rodrigo Farias" id="image"></abbr>
+          <abbr title="Rodrigo S. Farias"
+            ><img
+              src="imagens/Rodrigo-jpeg.jfif"
+              alt="Rodrigo Farias"
+              id="image"
+          /></abbr>
         </div>
         <div id="div-bar">
           <ul>
@@ -21,18 +26,19 @@
               <a href="index.html" class="item-list">Home |</a>
             </li>
             <li>
-              <a href="projetos.html" class="item-list">Projetos realizados |</a>
+              <a href="projetos.html" class="item-list"
+                >Projetos realizados |</a
+              >
             </li>
             <li>
               <a href="certificados.html" class="item-list">Certificados |</a>
             </li>
             <li>
-                <a href="curso.html" class="item-list">Curso</a>
+              <a href="curso.html" class="item-list">Curso</a>
             </li>
           </ul>
         </div>
-        
-        
+
         <div class="botao">
           <button onclick="menuShow()">
             <img class="icon" src="menu_white_36dp.svg" alt="" />
@@ -53,22 +59,39 @@
             <a href="certificados.html" class="item-list">Certificados</a>
           </li>
           <li>
-              <a href="curso.html" class="item-list">Curso</a>
+            <a href="curso.html" class="item-list">Curso</a>
           </li>
         </ul>
       </div>
-
     </header>
     <main>
-        <div id="tit">
-            <h1>Rodrigo Silva Farias</h1>
+      <div id="tit">
+        <h1>Rodrigo Silva Farias</h1>
+      </div>
+      <div class="dash-container">
+        <div class="dashboard">
+          <h3>Análise sobre hotéis e resorts</h3>
+          <iframe
+            title="Dash - Rede de Hotéis - Visão Geral"
+            width="600"
+            height="373.5"
+            src="https://app.powerbi.com/view?r=eyJrIjoiYzIzMmE4MDAtMWExNi00ZWNkLWJjOTctMGFkODcyNTcwYmU2IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
+            frameborder="0"
+            allowfullscreen="true"
+          ></iframe>
         </div>
-        <div class="dash-container">
-            <div class="hotel">
-                <iframe title="Dash - Rede de Hotéis - Visão Geral" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiYzIzMmE4MDAtMWExNi00ZWNkLWJjOTctMGFkODcyNTcwYmU2IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9" frameborder="0" allowFullScreen="true"></iframe>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore rerum omnis a voluptates modi incidunt exercitationem, similique id, quasi fugit repellat tenetur porro, officiis sequi? Minus voluptas assumenda cum minima! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod provident laudantium vero optio possimus ipsam officia, quasi hic architecto, rerum adipisci molestiae non quam velit impedit fugiat? Aut, non nesciunt?  </p>
-            </div>
+        <div class="dashboard">
+          <h3>Projeto de Engenharia</h3>
+          <iframe title="Dash - Cliente Lienge-Gerdau - Avanço Físico LIENGE" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiYTM0YWU5ODYtZmE2MS00MDg5LTgwNGItMGU0YjMyZmQzOTdhIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9" frameborder="0" allowFullScreen="true"></iframe>
         </div>
+        <div class="dashboard">
+          <h3>Projeto Financeiro</h3>
+          <iframe title="Dash - Legale Financeiro - Analise Financeira" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiYzA4OTQwYTktZTZjYy00NGVkLTk5NzEtMzYwNmFjMTFhMDE5IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9" frameborder="0" allowFullScreen="true"></iframe>
+        </div>
+      </div>
+      <div class="txt-projetos">
+        <p>Esses são alguns projetos realizados, para ver mais, <a href="">clique aqui</a> para ser redirecionado para os links de cada dashboard</p>
+      </div>
     </main>
     <script src="script.js"></script>
   </body>
