--- a/projetos.html
+++ b/projetos.html
@@ -70,27 +70,45 @@
       </div>
       <div class="dash-container">
         <div class="dashboard">
-          <h3>Análise sobre hotéis e resorts</h3>
+          <h3>ERP - Comercio Varejista 1</h3>
           <iframe
-            title="Dash - Rede de Hotéis - Visão Geral"
+            title="Dash - Dados Diários Mercado."
             width="600"
             height="373.5"
-            src="https://app.powerbi.com/view?r=eyJrIjoiYzIzMmE4MDAtMWExNi00ZWNkLWJjOTctMGFkODcyNTcwYmU2IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
+            src="https://app.powerbi.com/view?r=eyJrIjoiZWE1ZmU1ZGUtM2E0NS00MzUxLWFhNzctZmRmMGU1NmE4NDllIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9&pageName=ReportSection05061ab929e26842619a"
             frameborder="0"
             allowfullscreen="true"
           ></iframe>
         </div>
         <div class="dashboard">
           <h3>Projeto de Engenharia</h3>
-          <iframe title="Dash - Cliente Lienge-Gerdau - Avanço Físico LIENGE" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiYTM0YWU5ODYtZmE2MS00MDg5LTgwNGItMGU0YjMyZmQzOTdhIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9" frameborder="0" allowFullScreen="true"></iframe>
+          <iframe
+            title="Dash - Cliente Lienge-Gerdau - Avanço Físico LIENGE"
+            width="600"
+            height="373.5"
+            src="https://app.powerbi.com/view?r=eyJrIjoiYTM0YWU5ODYtZmE2MS00MDg5LTgwNGItMGU0YjMyZmQzOTdhIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
+            frameborder="0"
+            allowfullscreen="true"
+          ></iframe>
         </div>
         <div class="dashboard">
           <h3>Projeto Financeiro</h3>
-          <iframe title="Dash - Legale Financeiro - Analise Financeira" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiYzA4OTQwYTktZTZjYy00NGVkLTk5NzEtMzYwNmFjMTFhMDE5IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9" frameborder="0" allowFullScreen="true"></iframe>
+          <iframe
+            title="Dash - Legale Financeiro - Analise Financeira"
+            width="600"
+            height="373.5"
+            src="https://app.powerbi.com/view?r=eyJrIjoiYzA4OTQwYTktZTZjYy00NGVkLTk5NzEtMzYwNmFjMTFhMDE5IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
+            frameborder="0"
+            allowfullscreen="true"
+          ></iframe>
         </div>
       </div>
       <div class="txt-projetos">
-        <p>Esses são alguns projetos realizados, para ver mais, <a href="">clique aqui</a> para ser redirecionado para os links de cada dashboard</p>
+        <p>
+          Esses são alguns projetos realizados, para ver mais,
+          <a href="links.html" target="_blank">clique aqui</a> para ser redirecionado para os links de
+          cada dashboard
+        </p>
       </div>
     </main>
     <script src="script.js"></script>
