--- a/projetos.html
+++ b/projetos.html
@@ -106,8 +106,8 @@
       <div class="txt-projetos">
         <p>
           Esses são alguns projetos realizados, para ver mais,
-          <a href="links.html" target="_blank">clique aqui</a> para ser redirecionado para os links de
-          cada dashboard
+          <a href="links.html" target="_blank">clique aqui</a> para ser
+          redirecionado para os links de cada dashboard
         </p>
       </div>
     </main>
